# deadline-cloud-for-after-effects

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  FAQ.md  README.md  hatch.toml  hatch_custom_hook.py  jsxbundler.py  pyproject.toml  requirements-testing.txt
.github/workflows/: code_quality.yml  codeql.yml  release_publish.yml  reuse_python_build.yml  sync-fork.yml
docs/: adaptor_ipc.md
src/aeipc/: ipc.jsx  util.jsx
src/deadline/ae_adaptor/AEAdaptor/: AEAdaptor.json  __init__.py  __main__.py  adaptor.py  font_installer.py
src/deadline/ae_adaptor/AEAdaptor/schemas/: init_data.schema.json  run_data.schema.json
src/deadline/ae_adaptor/AEClient/: __init__.py  ae_client.py  ae_handler.py  ipc.py
src/deadline/ae_submitter/: DeadlineVersionRequirement.jsx  Imports.jsx  OpenAESubmitter.jsx
src/deadline/ae_submitter/UI/: AESubmitterUI.jsx  CloseButton.jsx  SettingsWindow.jsx  SubmitButton.jsx  SubmitLayersWindow.jsx
src/deadline/ae_submitter/ae_templates/: parameter_values.json  template.json
src/deadline/ae_submitter/data/: DeadlineData.jsx  InitData.jsx  Property.jsx
src/deadline/ae_submitter/polyfill/: index.js
src/deadline/ae_submitter/submission/: AssetReferenceTemplate.jsx  DataTemplate.jsx  JobTemplate.jsx  SubmitBundle.jsx
src/deadline/ae_submitter/utils/: AeUtil.jsx  DeadlineCommands.jsx  Logger.jsx  Settings.jsx  Util.jsx
